# mini_numpy

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
src/mini_numpy/: __init__.py  _matrices.py  _vectors.py
